--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,29 @@
-.gradle
-/local.properties
-/.idea/workspace.xml
-.DS_Store
+
+# built application files
+*.apk
+*.ap_
+
+# files for the dex VM
+*.dex
+
+# Java class files
+*.class
+
+# generated files
+bin/
+gen/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# IntelliJ Idea/Android Studio files
+*.iml
+*.ipr
+*.iws
+.idea/workspace.xml
+.gradle/
+build/
+
+# Eclipse project files
+.classpath
+.project
