--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.annoverse.app" >
+    package="com.itsaverse.app" >
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.annoverse.app.SettingsActivity"
+            android:name="com.itsaverse.app.SettingsActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,9 +19,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ImageViewer" android:label="Image Viewer" />
+        <activity android:name="com.itsaverse.app.ImageViewer" android:label="Image Viewer" />
 
-        <service android:name=".OverlayControlService" android:exported="false" />
+        <service android:name="com.itsaverse.app.OverlayControlService" android:exported="false" />
     </application>
 
 </manifest>
