--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.itsaverse.app.SettingsActivity"
+            android:noHistory="true"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.itsaverse.app.ImageViewer" android:label="Image Viewer" />
+        <activity android:name=".ImageViewerActivity" android:label="Image Viewer" />
 
         <service android:name="com.itsaverse.app.OverlayControlService" android:exported="false" />
     </application>
