--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         <activity
             android:name="com.itsaverse.app.SettingsActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme"
-            android:noHistory="true">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
